# ai_academy_capstone

./: .env.example  .gitignore  README.MD  architecture.mmd  docker-compose.yml  index.html  pyproject.toml  requirements.txt  start.py  test.html
docs/: architecture.mmd  index.html
